# RAGCheck

./: .gitignore  CLAUDE.md  RAGCheck_Implementation_Plan.md  README.md
demo/: dummy_rag.py
demo/docs/: employee_handbook.md
ragcheck-mcp/: README.md  pyproject.toml
ragcheck-mcp/src/ragcheck_mcp/: __init__.py  db.py  evaluation.py  generation.py  ingestion.py  models.py  server.py
